--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   ],
   "main": "./out/extension",
   "contributes": {
+    "commands": [
+			{
+				"command": "gitbranchwarm.debug",
+				"title": "Git Branch Warn: Debug"
+			}
+		],
     "configuration": [
       {
         "title": "Branch Warnings configuration",
@@ -36,7 +42,7 @@
           },
           "branchwarnings.protectedBranches": {
             "type": "array",
-            "default": [],
+            "default": ["master"],
             "description": "Array of names of protected branches to show warnings for."
           }
         }
