Fixed command typo

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "contributes": {
     "commands": [
 			{
-				"command": "gitbranchwarm.debug",
+				"command": "gitbranchwarn.debug",
 				"title": "Git Branch Warn: Debug"
 			}
 		],
