--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "branch-warnings",
   "displayName": "Git Branch Warnings",
   "description": "Warn when you're on the wrong Git branch, like MASTER",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "publisher": "teledemic",
   "repository": {
     "type": "git",
@@ -66,7 +66,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "publish": "vsce package && vsce publish"
   },
   "devDependencies": {
     "typescript": "^2.6.1",
