--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "enableProposedApi": true,
   "name": "branch-warnings",
   "displayName": "Git Branch Warnings",
   "description": "Warn when you're on the wrong Git branch, like MASTER",
@@ -15,13 +16,14 @@
     "theme": "dark"
   },
   "engines": {
-    "vscode": "^1.17.0"
+    "vscode": "^1.52.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "workspaceContains:.git"
+    "workspaceContains:.git",
+    "onCommand:gitbranchwarn.debug"
   ],
   "main": "./out/extension",
   "contributes": {
@@ -47,11 +49,6 @@
             ],
             "description": "Array of names of protected branches to show warnings for."
           },
-          "branchwarnings.msgColor": {
-            "type": "string",
-            "default": "#f00",
-            "description": "Allows you to change the warning msg color."
-          },
           "branchwarnings.msgTooltip": {
             "type": "string",
             "default": "This branch has been marked as protected in the branch-warnings extension",
@@ -64,16 +61,19 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
+    "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
-    "publish": "vsce package && vsce publish"
+    "download-api": "vscode-dts dev",
+    "postdownload-api": "vscode-dts master",
+    "postinstall": "npm run download-api"
   },
   "devDependencies": {
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6",
-    "@types/node": "^7.0.43",
-    "@types/mocha": "^2.2.42"
+    "@types/node": "^12.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "typescript": "^4.1.3",
+    "vscode-dts": "^0.3.1"
   },
   "dependencies": {
     "glob-to-regexp": "^0.4.1"
