--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "enableProposedApi": true,
   "name": "branch-warnings",
   "displayName": "Git Branch Warnings",
   "description": "Warn when you're on the wrong Git branch, like MASTER",
@@ -62,10 +61,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint": "eslint . --ext .ts,.tsx",
-    "watch": "tsc -watch -p ./",
-    "download-api": "vscode-dts dev",
-    "postdownload-api": "vscode-dts master",
-    "postinstall": "npm run download-api"
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/node": "^12.12.0",
@@ -73,7 +69,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
     "typescript": "^4.1.3",
-    "vscode-dts": "^0.3.1"
+    "@types/vscode": "^1.53.0"
   },
   "dependencies": {
     "glob-to-regexp": "^0.4.1"
