--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "branch-warnings",
   "displayName": "Git Branch Warnings",
   "description": "Warn when you're on the wrong Git branch, like MASTER",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "publisher": "teledemic",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "theme": "dark"
   },
   "engines": {
-    "vscode": "^1.52.0"
+    "vscode": "^1.53.0"
   },
   "categories": [
     "Other"
@@ -65,11 +65,11 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.0",
+    "@types/vscode": "^1.53.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
-    "typescript": "^4.1.3",
-    "@types/vscode": "^1.53.0"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "glob-to-regexp": "^0.4.1"
